src/test/ui/type-alias-impl-trait/issue-53678-generator-and-const-fn.full_tait.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-53678-generator-and-const-fn.rs:21:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

